# PPGEEC-LocalizacaoRobotica-TrabalhoFinal

./: .gitignore  Dockerfile  Dockerfile_CUDA  README.md  full_point_cloud.sh  glim_decimation.sh  ros_entrypoint.sh
.devcontainer/: devcontainer.json
Point_Cloud_Resolution/src/: CMakeLists.txt  LICENSE  husky_accessories.sh  package.xml
Point_Cloud_Resolution/src/bags/: full_point_cloud_2025-02-01-20-38-05.bag  full_point_cloud_2025-02-01-20-40-44.bag  full_point_cloud_2025-02-01-20-44-14.bag  full_point_cloud_2025-02-01-20-47-39.bag  full_point_cloud_2025-02-01-20-56-04.bag  full_point_cloud_2025-02-01-21-09-57.bag  full_point_cloud_2025-02-01-21-13-26.bag  full_point_cloud_2025-02-01-21-15-04.bag  full_point_cloud_2025-02-01-21-20-20.bag  full_point_cloud_2025-02-01-21-27-49.bag
Point_Cloud_Resolution/src/bags/csv/: diff_100000_points.csv  diff_10000_points.csv  odom_diff_csv.ipynb
Point_Cloud_Resolution/src/config/: lar_husky.rviz
Point_Cloud_Resolution/src/config/glim/: config.json  config_odometry_gpu.json  config_preprocess.json  config_ros.json
Point_Cloud_Resolution/src/husky_urdf_extras/: gazebo_ground_truth.urdf
Point_Cloud_Resolution/src/launch/: lar_full_point_cloud.launch  lar_glim.launch  lar_world.launch
Point_Cloud_Resolution/src/scripts/: glim_odom_diff.py
Point_Cloud_Resolution/src/worlds/: lar.world
